Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.10.0
-
None
-
c171731fe0281036ef6bb04f5d730b89359df87d
Description
I tested this with the /usr/share/doc/qt/examples/webenginewidgets/simplebrowser/simplebrowser from the official qt docs. This also affects many KDE applications like kontact, kalgebra, konqueror, ...
./simplebrowser
Using Wayland-EGL
WebEngine compiled with X11 support, however qpa backend is not xcb. This may fail.
[0110/214413.414437:WARNING:stack_trace_posix.cc(648)] Failed to open file: /home/munzir/#23464466 (deleted)
Error: No such file or directory
[10375:10397:0110/214413.471997:ERROR:gl_implementation.cc(246)] Failed to load /tmp/simplebrowser/libGLESv2.so: /tmp/simplebrowser/libGLESv2.so: cannot open shared object file: No such file or directory
Using the 'wl-shell' shell integration
[10375:10397:0110/214413.671577:ERROR:gl_surface_qt.cpp(701)] Requested OpenGL implementation is not supported. Implementation: 0
stack smashing detected ***: <unknown> terminated
Received signal 6
#0 0x7feb35a23086 <unknown>
#1 0x7feb3464f1cc <unknown>
#2 0x7feb35a233fc <unknown>
#3 0x7feb3aab98e0 <unknown>
#4 0x7feb3aab9860 __GI_raise
#5 0x7feb3aabaec9 __GI_abort
#6 0x7feb3aafc437 __libc_message
#7 0x7feb3ab8c33f _GI__fortify_fail_abort
#8 0x7feb3ab8c302 __stack_chk_fail_local
#9 0x7feb346a577c <unknown>
#10 0x7feb36478da7 <unknown>
#11 0x7feb36485e1e <unknown>
#12 0x7feb364886ff <unknown>
#13 0x7feb3648996f <unknown>
#14 0x7feb364832cd <unknown>
#15 0x7feb364839e8 <unknown>
#16 0x7feb36482bde <unknown>
#17 0x7feb36485095 <unknown>
#18 0x7feb35aa8ee2 <unknown>
#19 0x7feb35a40548 <unknown>
#20 0x7feb35a41528 <unknown>
#21 0x7feb35a41993 <unknown>
#22 0x7feb35a42cf1 <unknown>
#23 0x7feb35a6122b <unknown>
#24 0x7feb35a7c1f6 <unknown>
#25 0x7feb35a773eb <unknown>
#26 0x7feb3326708c start_thread
#27 0x7feb3ab7ae1f _GI__clone
r8: 0000000000000000 r9: 00007feae27fa730 r10: 0000000000000008 r11: 0000000000000246
r12: 00007feae27fa9d0 r13: 0000000000001000 r14: 0000000000000000 r15: 0000000000000030
di: 0000000000000002 si: 00007feae27fa730 bp: 00007feae27fab60 bx: 0000000000000006
dx: 0000000000000000 ax: 0000000000000000 cx: 00007feb3aab9860 sp: 00007feae27fa730
ip: 00007feb3aab9860 efl: 0000000000000246 cgf: 002b000000000033 erf: 0000000000000000
trp: 0000000000000000 msk: 0000000000000000 cr2: 0000000000000000
[end of stack trace]
Calling _exit(1). Core file will not be generated.
Attachments
Issue Links
- relates to
-
QTBUG-65442 qmake property QT_SYSROOT treated as variable in qtwebengine/mkspecs/features/gn_generator.prf
-
- Closed
-
For Gerrit Dashboard: QTBUG-65682 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
220302,23 | Use ozone for x11 | dev | qt/qtwebengine | Status: MERGED | -2 | 0 |
220318,16 | Fix up ozone egl | dev | qt/qtwebengine | Status: ABANDONED | -2 | 0 |
220688,5 | Switch to use glx over ozone | 67-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
225642,5 | Do not initialize static bindings in x11_initializer | 65-based | qt/qtwebengine-chromium | Status: MERGED | +2 | 0 |
225649,4 | Add initialization of static bindings for egl and glx | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |
225653,3 | Move check for g_egl_surfaceless_context_supported | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |
225654,4 | Do no log pbuffer creation failure as error | 5.11 | qt/qtwebengine | Status: MERGED | +2 | 0 |