Switch to use glx over ozone

Use ozone glx instead of x11 glx.

Task-number: QTBUG-65682
Change-Id: I612ff7993812607a170a42c4fe72abd9913ef0c5
Reviewed-by: Kai Koehne <kai.koehne@qt.io>
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>