chromium/ui/gl/init/gl_factory_ozone.cc
@@ -31,7 +31,6 @@ bool GetGLWindowSystemBindingInfo(const GLVersionInfo& gl_info,
              : false;
 }
 
-#if !defined(TOOLKIT_QT)
 scoped_refptr<GLContext> CreateGLContext(GLShareGroup* share_group,
                                          GLSurface* compatible_surface,
                                          const GLContextAttribs& attribs) {
@@ -105,7 +104,6 @@ scoped_refptr<GLSurface> CreateOffscreenGLSurfaceWithFormat(
   }
   return nullptr;
 }
-#endif
 
 void SetDisabledExtensionsPlatform(const std::string& disabled_extensions) {
   if (HasGLOzone()) {
